--- a/e7-camel-processor-consumer/.project
+++ b/e7-camel-processor-consumer/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>e7-camel-processor-consumer</name>
+	<name>e7-camel-processor</name>
 	<comment></comment>
 	<projects>
 	</projects>
